[project]
name = "qiskit-guide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pylatexenc>=2.10",
    "qiskit>=2.2.3",
    "qiskit-ibm-runtime>=0.44.0",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
]
